--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
   intl: ^0.18.0
+  tasty_toast: ^1.0.0
 
 dev_dependencies:
   flutter_test:
