--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^4.3.1
   intl: ^0.18.0
   tasty_toast: ^1.0.0
+  smooth_page_indicator: ^1.0.0+2
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +65,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/add.PNG
+    - assets/details.PNG
+    - assets/home.PNG
+    - assets/search_1.PNG
+    - assets/search_2.PNG
+    - assets/add_button.PNG
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
